# excel-writing-multilanguage-benchmark

./: .gitignore  README.md
go_excelize/: go.mod  main.go
node_exceljs/: main.js  package-lock.json  package.json
python_xlsxwriter/: main.py
rust_xlsxwriter/: Cargo.toml
rust_xlsxwriter/src/: main.rs  main_original.rs
