[package]
name = "excel"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
# snippet-start:[s3.rust.s3-object-lambda-cargo.toml]
# snippet-end:[s3.rust.s3-object-lambda-cargo.toml]
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
aws-smithy-runtime = { version = "1.0.1" }
aws-smithy-runtime-api = { version = "1.0.1", features = ["client"] }
aws-smithy-types = { version = "1.0.1", features = ["http-body-0-4-x"] }
anyhow = "1.0.70"
bytes = "1.4.0"
clap = { version = "~4.4", features = ["derive"] }
futures-util = { version = "0.3.21", features = ["alloc"] }
http = "0.2.8"
http-body = "0.4.5"
md-5 = "0.10.1"
pin-project = "1.0.12"
rand = "0.8.5"
thiserror = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = "0.1.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }

serde_json = "1"
serde = { version = "1", features = ["derive"]}
chrono = "0.4.38"
rust_xlsxwriter = { version = "0.79.2", features = ["constant_memory"] }
flate2 = "1.0.34"
rayon = "1.5"

